yaml/elasticsearch-operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: elasticsearch-operator
    release: elasticsearch-operator
  name: elasticsearch-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch-operator
      release: elasticsearch-operator
  template:
    metadata:
      labels:
        app: elasticsearch-operator
        release: elasticsearch-operator
    spec:
      nodeSelector:
        env: dev-node
      containers:
      - env:
        - name: NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: upmcenterprises/elasticsearch-operator:0.3.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /live
            port: 8000
          initialDelaySeconds: 10
          timeoutSeconds: 10
        name: elasticsearch-operator
        ports:
        - containerPort: 8000
          name: http
        readinessProbe:
          httpGet:
            path: /ready
            port: 8000
          initialDelaySeconds: 10
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 128Mi
      serviceAccountName: elasticsearch-operator
