yaml/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dlc-tf
spec:
  containers:
  - name: dlc-tf
    image: gcr.io/deeplearning-platform-release/tf-gpu
    resources:
      limits:
        nvidia.com/gpu: 1
    volumeMounts:
      - name: dlc-volume
        mountPath: /home
  volumes:
  - name: dlc-volume
    persistentVolumeClaim:
      claimName: dlc-persistent-volume-claim

# kubectl apply -f ./pod.yaml
# kubectl port-forward pods/dlc-tf 8080:8080
