yaml/efk.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kibana
    release: efk
  name: efk-kibana
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 5601
  selector:
    app: kibana
    release: efk
  type: ClusterIP
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  labels:
    app: kibana
    release: efk
  name: efk-kibana
spec:
  replicas: 1
  revisionHistoryLimit: 3
  template:
    metadata:
      annotations:
        checksum/config: dae06a930c445e7ddb2e20e22e7bb0b5b06e999d09ca341da391631eebabb4a5
      labels:
        app: kibana
        release: efk
    spec:
      nodeSelector:
        env: dev-node
      containers:
      - env:
        - name: ELASTICSEARCH_URL
          value: http://elasticsearch-efk-cluster:9200
        - name: LOGGING_VERBOSE
          value: "true"
        - name: SERVER_DEFAULTROUTE
          value: /app/kibana
        - name: SERVER_PORT
          value: "5601"
        image: docker.elastic.co/kibana/kibana-oss:6.4.2
        imagePullPolicy: IfNotPresent
        name: kibana
        ports:
        - containerPort: 5601
          name: kibana
          protocol: TCP
        resources: {}
        volumeMounts:
        - mountPath: /usr/share/kibana/config/kibana.yml
          name: kibana
          subPath: kibana.yml
      serviceAccountName: default
      tolerations: []
      volumes:
      - configMap:
          name: efk-kibana
        name: kibana
---
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  labels:
    app: fluent-bit
    release: efk
  name: fluent-bit
spec:
  template:
    metadata:
      annotations:
        checksum/config: 095b355883b73366c561bc1b977da84a373225d68ee0251cafc47a2d195902f5
      labels:
        app: fluent-bit
        release: efk
    spec:
      nodeSelector:
        env: dev-node
      containers:
      - env: []
        image: fluent/fluent-bit:1.0.4
        imagePullPolicy: Always
        name: fluent-bit
        resources: {}
        volumeMounts:
        - mountPath: /var/log
          name: varlog
        - mountPath: /var/lib/docker/containers
          name: varlibdockercontainers
          readOnly: true
        - mountPath: /fluent-bit/etc/fluent-bit.conf
          name: config
          subPath: fluent-bit.conf
        - mountPath: /fluent-bit/etc/fluent-bit-service.conf
          name: config
          subPath: fluent-bit-service.conf
        - mountPath: /fluent-bit/etc/fluent-bit-input.conf
          name: config
          subPath: fluent-bit-input.conf
        - mountPath: /fluent-bit/etc/fluent-bit-filter.conf
          name: config
          subPath: fluent-bit-filter.conf
        - mountPath: /fluent-bit/etc/fluent-bit-output.conf
          name: config
          subPath: fluent-bit-output.conf
      dnsPolicy: ClusterFirst
      hostNetwork: false
      serviceAccountName: efk-fluent-bit
      terminationGracePeriodSeconds: 10
      volumes:
      - hostPath:
          path: /var/log
        name: varlog
      - hostPath:
          path: /var/lib/docker/containers
        name: varlibdockercontainers
      - configMap:
          name: efk-fluent-bit-config
        name: config
  updateStrategy:
    type: RollingUpdate
