yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ctfd
  namespace: ctfd
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "web-ctfd-ip"
spec:
  defaultBackend:
    service:
      name: ctfd
      port:
        number: 8000
